feat: implemet JWT security and production-ready configurations